# shout-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: stdin.rs
shout-sys/: Cargo.toml  build.rs
shout-sys/src/: lib.rs
src/: lib.rs
