[package]
name = "shout-sys"
version = "0.2.0"
authors = ["Luminarys <postmaster@gensok.io>", "Ben Stern <bas-github@kukaret.com>"]

repository = "https://github.com/luminarys/shout-rs"
description = "Low level FFI bindings to libshout"
keywords = [ "shout", "libshout", "icecast", "shoutcast" ]
license = "ISC"

build = "build.rs"

[dependencies]
libc = "0.2"
